trunk/GraphToTIKZ/tikzgrammarParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g 2010-07-29 17:05:37

 	using GraphToTIKZ;
		using System.Drawing;
		using System.Collections.Generic;
	

using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;


public class tikzgrammarParser : Parser 
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"DEFINECOLOR", 
		"BEGINTP", 
		"ENDTP", 
		"NODE", 
		"DRAW", 
		"EDGE", 
		"AT", 
		"LPAR", 
		"RPAR", 
		"LBR", 
		"RBR", 
		"LBRR", 
		"RBRR", 
		"KOMMA", 
		"SCALE", 
		"EQU", 
		"SEMIC", 
		"COLON", 
		"STYLESEP", 
		"LABEL", 
		"EVERYLOOP", 
		"ST_INNERSEP", 
		"ST_OUTERSEP", 
		"ST_FILL", 
		"ST_DRAW", 
		"ST_SHAPE", 
		"ST_MINSIZE", 
		"LOOP", 
		"IN", 
		"OUT", 
		"UN_PTS", 
		"UN_CM", 
		"TIKZGRAPH", 
		"ID", 
		"FLOAT", 
		"INT", 
		"EXPONENT", 
		"COMMENT", 
		"WS", 
		"ESC_SEQ", 
		"STRING", 
		"HEX_DIGIT", 
		"UNICODE_ESC", 
		"OCTAL_ESC", 
		"'rgb'", 
		"'--'", 
		"'to'"
    };

    public const int TIKZGRAPH = 36;
    public const int EXPONENT = 40;
    public const int RBR = 14;
    public const int EDGE = 9;
    public const int OCTAL_ESC = 47;
    public const int ST_FILL = 27;
    public const int BEGINTP = 5;
    public const int FLOAT = 38;
    public const int ID = 37;
    public const int EOF = -1;
    public const int LBR = 13;
    public const int AT = 10;
    public const int RBRR = 16;
    public const int ESC_SEQ = 43;
    public const int IN = 32;
    public const int LPAR = 11;
    public const int EVERYLOOP = 24;
    public const int ENDTP = 6;
    public const int LOOP = 31;
    public const int ST_OUTERSEP = 26;
    public const int COMMENT = 41;
    public const int DEFINECOLOR = 4;
    public const int T__50 = 50;
    public const int ST_INNERSEP = 25;
    public const int NODE = 7;
    public const int UN_PTS = 34;
    public const int T__48 = 48;
    public const int T__49 = 49;
    public const int UNICODE_ESC = 46;
    public const int STYLESEP = 22;
    public const int HEX_DIGIT = 45;
    public const int LBRR = 15;
    public const int INT = 39;
    public const int UN_CM = 35;
    public const int COLON = 21;
    public const int ST_DRAW = 28;
    public const int SCALE = 18;
    public const int WS = 42;
    public const int LABEL = 23;
    public const int ST_MINSIZE = 30;
    public const int OUT = 33;
    public const int KOMMA = 17;
    public const int ST_SHAPE = 29;
    public const int EQU = 19;
    public const int RPAR = 12;
    public const int SEMIC = 20;
    public const int STRING = 44;
    public const int DRAW = 8;

    // delegates
    // delegators



        public tikzgrammarParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public tikzgrammarParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
       }
        

    override public string[] TokenNames {
		get { return tikzgrammarParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g"; }
    }

     	public TikzGraph tres = new TikzGraph(); 
    		public Dictionary<string, Color> coldefs = new Dictionary<string, Color>();
    	 


    // $ANTLR start "tikzpictopts"
    // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:65:1: tikzpictopts : ( tikzpictopt ( KOMMA tikzpictopt )* )? ;
    public void tikzpictopts() // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:66:2: ( ( tikzpictopt ( KOMMA tikzpictopt )* )? )
            // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:66:4: ( tikzpictopt ( KOMMA tikzpictopt )* )?
            {
            	// C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:66:4: ( tikzpictopt ( KOMMA tikzpictopt )* )?
            	int alt2 = 2;
            	int LA2_0 = input.LA(1);

            	if ( (LA2_0 == SCALE || LA2_0 == EVERYLOOP || LA2_0 == ID) )
            	{
            	    alt2 = 1;
            	}
            	switch (alt2) 
            	{
            	    case 1 :
            	        // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:66:5: tikzpictopt ( KOMMA tikzpictopt )*
            	        {
            	        	PushFollow(FOLLOW_tikzpictopt_in_tikzpictopts355);
            	        	tikzpictopt();
            	        	state.followingStackPointer--;

            	        	// C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:66:17: ( KOMMA tikzpictopt )*
            	        	do 
            	        	{
            	        	    int alt1 = 2;
            	        	    int LA1_0 = input.LA(1);

            	        	    if ( (LA1_0 == KOMMA) )
            	        	    {
            	        	        alt1 = 1;
            	        	    }


            	        	    switch (alt1) 
            	        		{
            	        			case 1 :
            	        			    // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:66:18: KOMMA tikzpictopt
            	        			    {
            	        			    	Match(input,KOMMA,FOLLOW_KOMMA_in_tikzpictopts358); 
            	        			    	PushFollow(FOLLOW_tikzpictopt_in_tikzpictopts360);
            	        			    	tikzpictopt();
            	        			    	state.followingStackPointer--;


            	        			    }
            	        			    break;

            	        			default:
            	        			    goto loop1;
            	        	    }
            	        	} while (true);

            	        	loop1:
            	        		;	// Stops C# compiler whining that label 'loop1' has no statements


            	        }
            	        break;

            	}


            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end "tikzpictopts"


    // $ANTLR start "tikzpicture"
    // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:68:1: tikzpicture : ( colordefs )* BEGINTP ( LBR tikzpictopts RBR )? tikzbody ENDTP ;
    public void tikzpicture() // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:69:2: ( ( colordefs )* BEGINTP ( LBR tikzpictopts RBR )? tikzbody ENDTP )
            // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:69:4: ( colordefs )* BEGINTP ( LBR tikzpictopts RBR )? tikzbody ENDTP
            {
            	// C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:69:4: ( colordefs )*
            	do 
            	{
            	    int alt3 = 2;
            	    int LA3_0 = input.LA(1);

            	    if ( (LA3_0 == DEFINECOLOR) )
            	    {
            	        alt3 = 1;
            	    }


            	    switch (alt3) 
            		{
            			case 1 :
            			    // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:69:5: colordefs
            			    {
            			    	PushFollow(FOLLOW_colordefs_in_tikzpicture377);
            			    	colordefs();
            			    	state.followingStackPointer--;


            			    }
            			    break;

            			default:
            			    goto loop3;
            	    }
            	} while (true);

            	loop3:
            		;	// Stops C# compiler whining that label 'loop3' has no statements

            	Match(input,BEGINTP,FOLLOW_BEGINTP_in_tikzpicture381); 
            	// C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:69:25: ( LBR tikzpictopts RBR )?
            	int alt4 = 2;
            	int LA4_0 = input.LA(1);

            	if ( (LA4_0 == LBR) )
            	{
            	    alt4 = 1;
            	}
            	switch (alt4) 
            	{
            	    case 1 :
            	        // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:69:26: LBR tikzpictopts RBR
            	        {
            	        	Match(input,LBR,FOLLOW_LBR_in_tikzpicture384); 
            	        	PushFollow(FOLLOW_tikzpictopts_in_tikzpicture386);
            	        	tikzpictopts();
            	        	state.followingStackPointer--;

            	        	Match(input,RBR,FOLLOW_RBR_in_tikzpicture388); 

            	        }
            	        break;

            	}

            	PushFollow(FOLLOW_tikzbody_in_tikzpicture392);
            	tikzbody();
            	state.followingStackPointer--;

            	Match(input,ENDTP,FOLLOW_ENDTP_in_tikzpicture394); 
            	 tres.InferStyleTypes(); 

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end "tikzpicture"


    // $ANTLR start "colordefs"
    // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:71:1: colordefs : DEFINECOLOR LBRR ID RBRR LBRR 'rgb' RBRR LBRR tr= FLOAT KOMMA tg= FLOAT KOMMA tb= FLOAT RBRR ;
    public void colordefs() // throws RecognitionException [1]
    {   
        IToken tr = null;
        IToken tg = null;
        IToken tb = null;
        IToken ID1 = null;

        try 
    	{
            // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:72:2: ( DEFINECOLOR LBRR ID RBRR LBRR 'rgb' RBRR LBRR tr= FLOAT KOMMA tg= FLOAT KOMMA tb= FLOAT RBRR )
            // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:72:4: DEFINECOLOR LBRR ID RBRR LBRR 'rgb' RBRR LBRR tr= FLOAT KOMMA tg= FLOAT KOMMA tb= FLOAT RBRR
            {
            	Match(input,DEFINECOLOR,FOLLOW_DEFINECOLOR_in_colordefs406); 
            	Match(input,LBRR,FOLLOW_LBRR_in_colordefs408); 
            	ID1=(IToken)Match(input,ID,FOLLOW_ID_in_colordefs410); 
            	Match(input,RBRR,FOLLOW_RBRR_in_colordefs412); 
            	Match(input,LBRR,FOLLOW_LBRR_in_colordefs414); 
            	Match(input,48,FOLLOW_48_in_colordefs416); 
            	Match(input,RBRR,FOLLOW_RBRR_in_colordefs418); 
            	Match(input,LBRR,FOLLOW_LBRR_in_colordefs420); 
            	tr=(IToken)Match(input,FLOAT,FOLLOW_FLOAT_in_colordefs424); 
            	Match(input,KOMMA,FOLLOW_KOMMA_in_colordefs426); 
            	tg=(IToken)Match(input,FLOAT,FOLLOW_FLOAT_in_colordefs430); 
            	Match(input,KOMMA,FOLLOW_KOMMA_in_colordefs432); 
            	tb=(IToken)Match(input,FLOAT,FOLLOW_FLOAT_in_colordefs436); 
            	Match(input,RBRR,FOLLOW_RBRR_in_colordefs438); 
            	 
            				coldefs[((ID1 != null) ? ID1.Text : null)] = Color.FromArgb( Convert.ToInt32(Double.Parse(((tr != null) ? tr.Text : null))*255),
            							 	    Convert.ToInt32(Double.Parse(((tg != null) ? tg.Text : null))*255),
            							 	    Convert.ToInt32(Double.Parse(((tb != null) ? tb.Text : null))*255) ); 

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end "colordefs"


    // $ANTLR start "tikzpictopt"
    // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:77:1: tikzpictopt : ( scaleopt | styledef ) ;
    public void tikzpictopt() // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:78:2: ( ( scaleopt | styledef ) )
            // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:78:4: ( scaleopt | styledef )
            {
            	// C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:78:4: ( scaleopt | styledef )
            	int alt5 = 2;
            	int LA5_0 = input.LA(1);

            	if ( (LA5_0 == SCALE) )
            	{
            	    alt5 = 1;
            	}
            	else if ( (LA5_0 == EVERYLOOP || LA5_0 == ID) )
            	{
            	    alt5 = 2;
            	}
            	else 
            	{
            	    NoViableAltException nvae_d5s0 =
            	        new NoViableAltException("", 5, 0, input);

            	    throw nvae_d5s0;
            	}
            	switch (alt5) 
            	{
            	    case 1 :
            	        // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:78:5: scaleopt
            	        {
            	        	PushFollow(FOLLOW_scaleopt_in_tikzpictopt451);
            	        	scaleopt();
            	        	state.followingStackPointer--;


            	        }
            	        break;
            	    case 2 :
            	        // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:78:16: styledef
            	        {
            	        	PushFollow(FOLLOW_styledef_in_tikzpictopt455);
            	        	styledef();
            	        	state.followingStackPointer--;


            	        }
            	        break;

            	}


            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end "tikzpictopt"


    // $ANTLR start "scaleopt"
    // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:79:1: scaleopt : SCALE EQU FLOAT ;
    public void scaleopt() // throws RecognitionException [1]
    {   
        IToken FLOAT2 = null;

        try 
    	{
            // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:80:2: ( SCALE EQU FLOAT )
            // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:80:4: SCALE EQU FLOAT
            {
            	Match(input,SCALE,FOLLOW_SCALE_in_scaleopt465); 
            	Match(input,EQU,FOLLOW_EQU_in_scaleopt467); 
            	FLOAT2=(IToken)Match(input,FLOAT,FOLLOW_FLOAT_in_scaleopt469); 
            	tres.scale = Double.Parse(((FLOAT2 != null) ? FLOAT2.Text : null));

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end "scaleopt"


    // $ANTLR start "styledef"
    // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:82:1: styledef : (tid= ( EVERYLOOP | ID ) STYLESEP EQU LBRR styleopts[dos] RBRR ) ;
    public void styledef() // throws RecognitionException [1]
    {   
        IToken tid = null;

         DrawObjectStyle dos = new DrawObjectStyle(); 
        try 
    	{
            // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:84:2: ( (tid= ( EVERYLOOP | ID ) STYLESEP EQU LBRR styleopts[dos] RBRR ) )
            // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:84:4: (tid= ( EVERYLOOP | ID ) STYLESEP EQU LBRR styleopts[dos] RBRR )
            {
            	// C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:84:4: (tid= ( EVERYLOOP | ID ) STYLESEP EQU LBRR styleopts[dos] RBRR )
            	// C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:84:5: tid= ( EVERYLOOP | ID ) STYLESEP EQU LBRR styleopts[dos] RBRR
            	{
            		tid = (IToken)input.LT(1);
            		if ( input.LA(1) == EVERYLOOP || input.LA(1) == ID ) 
            		{
            		    input.Consume();
            		    state.errorRecovery = false;
            		}
            		else 
            		{
            		    MismatchedSetException mse = new MismatchedSetException(null,input);
            		    throw mse;
            		}

            		Match(input,STYLESEP,FOLLOW_STYLESEP_in_styledef498); 
            		Match(input,EQU,FOLLOW_EQU_in_styledef500); 
            		Match(input,LBRR,FOLLOW_LBRR_in_styledef502); 
            		PushFollow(FOLLOW_styleopts_in_styledef504);
            		styleopts(dos);
            		state.followingStackPointer--;

            		Match(input,RBRR,FOLLOW_RBRR_in_styledef507); 

            	}

            	 dos.name=((tid != null) ? tid.Text : null); tres.styles[dos.name] = dos; 

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end "styledef"


    // $ANTLR start "styleopts"
    // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:86:1: styleopts[DrawObjectStyle dos] : ( styleopt[dos] ( KOMMA styleopt[dos] )* )? ;
    public void styleopts(DrawObjectStyle dos) // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:87:2: ( ( styleopt[dos] ( KOMMA styleopt[dos] )* )? )
            // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:87:4: ( styleopt[dos] ( KOMMA styleopt[dos] )* )?
            {
            	// C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:87:4: ( styleopt[dos] ( KOMMA styleopt[dos] )* )?
            	int alt7 = 2;
            	int LA7_0 = input.LA(1);

            	if ( ((LA7_0 >= ST_INNERSEP && LA7_0 <= ST_MINSIZE)) )
            	{
            	    alt7 = 1;
            	}
            	switch (alt7) 
            	{
            	    case 1 :
            	        // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:87:5: styleopt[dos] ( KOMMA styleopt[dos] )*
            	        {
            	        	PushFollow(FOLLOW_styleopt_in_styleopts523);
            	        	styleopt(dos);
            	        	state.followingStackPointer--;

            	        	// C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:87:19: ( KOMMA styleopt[dos] )*
            	        	do 
            	        	{
            	        	    int alt6 = 2;
            	        	    int LA6_0 = input.LA(1);

            	        	    if ( (LA6_0 == KOMMA) )
            	        	    {
            	        	        alt6 = 1;
            	        	    }


            	        	    switch (alt6) 
            	        		{
            	        			case 1 :
            	        			    // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:87:20: KOMMA styleopt[dos]
            	        			    {
            	        			    	Match(input,KOMMA,FOLLOW_KOMMA_in_styleopts527); 
            	        			    	PushFollow(FOLLOW_styleopt_in_styleopts529);
            	        			    	styleopt(dos);
            	        			    	state.followingStackPointer--;


            	        			    }
            	        			    break;

            	        			default:
            	        			    goto loop6;
            	        	    }
            	        	} while (true);

            	        	loop6:
            	        		;	// Stops C# compiler whining that label 'loop6' has no statements


            	        }
            	        break;

            	}


            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end "styleopts"


    // $ANTLR start "tikzbody"
    // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:89:1: tikzbody : ( tikznode | tikzedge )* ;
    public void tikzbody() // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:90:2: ( ( tikznode | tikzedge )* )
            // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:90:4: ( tikznode | tikzedge )*
            {
            	// C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:90:4: ( tikznode | tikzedge )*
            	do 
            	{
            	    int alt8 = 3;
            	    int LA8_0 = input.LA(1);

            	    if ( (LA8_0 == NODE) )
            	    {
            	        alt8 = 1;
            	    }
            	    else if ( (LA8_0 == DRAW) )
            	    {
            	        alt8 = 2;
            	    }


            	    switch (alt8) 
            		{
            			case 1 :
            			    // C:\\Users\\thomas\\Documents\\Visual Studio 2010\\Projects\\GraphToTIKZ\\graph2tikz\\GraphToTIKZ\\tikzgrammar.g:90:5: tikznode
            			    {
            			    	PushFollow(FOLLOW_tikznode_in_tikzbody546);
            			    	tikznode();
            			    	state.followingStackPointer--;


            			    }
            			    break;
            			case 2 :
